IT CAN BE BUILT! Just use `jpackageImage`!