@@ -2,7 +2,7 @@ plugins {
   id 'java'
   id 'application'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
+  id 'org.openjfx.javafxplugin' version '0.1.0'
   id 'org.beryx.jlink' version '2.25.0'
 }
 
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'biz.donvi.syncthingversionpicker'
-  mainClass = 'biz.donvi.syncthingversionpicker.HelloApplication'
+  mainClass = 'biz.donvi.syncthingversionpicker.SyncPickerApp'
 }
 
 javafx {
@@ -54,11 +54,19 @@ dependencies {
 test {
 useJUnitPlatform()}
 
+jar {
+  manifest {
+    attributes(
+      'Main-Class': 'biz.donvi.syncthingversionpicker.SyncPickerApp'
+    )
+  }
+}
+
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules', 'jdk.crypto.ec']
   launcher {
-    name = 'app'
+    name = 'SyncthingVersionPicker'
   }
 }
 
